Changed nav bar and heading. Made appropriate changes to the corresponding css.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="main-header">
-      <img src="./assets/images/Logo 500x500 px (5).png" alt="Artistic Heart Logo">
+      <img src="./assets/images/portfolio_banner.png" alt="Floral header">
     <nav class="text-center">
       <ul>
         <li> <a href="#about">About Me</a></li>
@@ -22,17 +22,26 @@
 
   <main>
     <section class="about" id="about">
-        <h1>About</h1>
+        <h1>About Me</h1>
         <article>
+            <div>
+            <p id="intro">
+                Hello! 
+            </p>
+            <p id="intro2">
+                I am Mary Lou
+            </p>
+            <p id=intro5>
+                Hoover.
+            </p>
+            </div>
             <img src="./assets/images/Me.png" alt="My picture">
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore earum fugiat officiis, error odit vero ducimus nisi possimus veniam omnis explicabo iusto architecto laboriosam ipsum, dolor quos et voluptatum assumenda eos, quas tempora! Ut odio id cumque esse est fugiat suscipit maxime exercitationem veritatis sapiente, aut voluptatum inventore consequatur, excepturi doloremque perspiciatis impedit quas ad iure obcaecati mollitia, saepe facilis maiores quibusdam? Voluptatum consectetur in velit perspiciatis, praesentium rerum minus libero, consequuntur laboriosam voluptas pariatur nam perferendis qui. 
+            <p id="intro3">
+                I graduated from The University of Texas at San Antonio with a degree of Bachlor of Science Mathematics. I love all things logic and mathematical however, my love and passion for creativity led me to the design aspect of web development. 
             </p>  
         </article>     
     </section>
-    <br>
-    <br>
-    <br>
+
     <div>
         <h1>My Work</h1>
     </div>
