updated contact icons and fixed formatting issues on css.

--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
                 Hello! 
             </p>
             <p id="intro2">
-                I am Mary Lou
-            </p>
-            <p id=intro5>
-                Hoover.
+                I am Mary Lou Hoover.
             </p>
             </div>
             <img src="./assets/images/Me.png" alt="My picture">
@@ -42,7 +39,7 @@
         </article>     
     </section>
 
-    <div>
+    <div class = "headingWork">
         <h1>My Work</h1>
     </div>
     <section id="work" class="work" >
@@ -67,23 +64,41 @@
         </div>
     </section>
     
-    <section class="contact" id="contact">
+    <div class = "headingContact">
       <h1>Contact</h1>
-      <form>
+    </div>
+    <section class="contact" id="contact">
         <ul>
           <li>
-            <label class="text-right" for="name">Name:</label>
-            <input type="text" id="name" name="user-name">
+            <figure id="github">
+            <a href="https://github.com/mlh19">
+              <img src="assets/images/github-logo.png" alt="GitHub Icon">
+            </a>
+          </figure>
+          </li>
+          <li> 
+            <figure class="icon">
+              <a href="https://www.linkedin.com/in/ml-hoover/">
+            <img src="assets/images/Logo 500x500 px (7).png" alt="LinkedIn  Icon"></a>
+          </figure>
           </li>
           <li>
-            <label class="text-right" for="email">Email:</label>
-            <input type="text" id="email" name="user-email">
+            <figure class="icon">
+              <a href="https://twitter.com/ml_hoover">
+            <img src="assets/images/(COPY) Logo 500x500 px.png" alt="Twitter Icon"></a>
+          </figure>
+          </li>
+          <li>
+          <figure class="icon">
+            <a href="830-998-6717">
+            <img src="assets/images/Logo 500x500 px (6).png" alt="Phone Icon"></a>
+          </figure>
           </li>
         </ul>
-        <div class="text-center">
-          <button type="submit">SEND</button>
-        </div>
-      </form>
+
+
+      
+
     </section>
   </main>
 
