working on media queries

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <img src="./assets/images/Me.png" alt="My picture">
             <p id="intro3">
-                I graduated from The University of Texas at San Antonio with a degree of Bachlor of Science Mathematics. I love all things logic and mathematical however, my love and passion for creativity led me to the design aspect of web development. 
+                Degree in Mathematics. Aspiring web developer. 
             </p>  
         </article>     
     </section>
