made changes to the footer and styling

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </main>
 
   <footer class="text-center">
-    Mary Lou Hoover © 2021 
+    <h2>Mary Lou Hoover © 2021</h2>
   </footer>
     
 </body>
