fixed bugs, added footer styling and made other changes to css necessary for header to fit w/o issues.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <header class="main-header">
-      <img src="./assets/images/portfolio_banner.png" alt="Floral header">
-    <nav class="text-center">
+      <img src="./assets/images/portfolio_banner.png" alt="Floral header"/>
+    <nav>
       <ul>
         <li> <a href="#about">About Me</a></li>
         <li> <a href="#work">My Work</a></li>
@@ -33,9 +33,11 @@
             </p>
             </div>
             <img src="./assets/images/Me.png" alt="My picture">
-            <p id="intro3">
+            <div>
+              <p id="intro3">
                 Degree in Mathematics. Aspiring web developer. 
-            </p>  
+              </p>  
+            </div>
         </article>     
     </section>
 
