Link project 1 and quiz homework

--- a/index.html
+++ b/index.html
@@ -46,11 +46,15 @@
     </div>
     <section id="work" class="work" >
         <figure id="card">
-            <img src="assets/images/placeholder.png" alt="Placeholder for website">
+          <a href= "https://dertodd.github.io/Project_one_The_Survivors/">
+            <img id="mainImg" src="assets/images/projects/FoodBuzzHomepage.png" alt="Project 1">
+          </a>
         </figure>
         <div class="box">
         <figure class="card">
-            <img src="assets/images/placeholder.png" alt="Placeholder for website">
+          <a href="https://mlh19.github.io/HorrorQuiz/">
+            <img src="assets/images/projects/QuizScreenshot.png" alt="Placeholder for website">
+          </a>
         </figure>
         <figure class="card">
             <img src="assets/images/placeholder.png" alt="Placeholder for website">
