update the readme, add resume pdf, and fix some issues with css.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
 <body>
   <header class="main-header">
-      <img src="./assets/images/portfolio_banner.png" alt="Floral header"/>
+      <img src="./assets/images/Untitled design (2).png" alt="Floral header"/>
     <nav>
       <ul>
         <li> <a href="#about">About Me</a></li>
         <li> <a href="#work">My Work</a></li>
         <li> <a href="#contact">Contact</a></li>
+        <li> <a href="./assets/images/Resume.pdf" target="_blank">Resume</a></li>
       </ul>
     </nav>
   </header>
