connect phone link in html

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </li>
           <li>
           <figure class="icon">
-            <a href="830-998-6717">
+            <a href="tel:+830-998-6717">
             <img src="assets/images/Logo 500x500 px (6).png" alt="Phone Icon"></a>
           </figure>
           </li>
