--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
               </span>
             </div>
           </a>
-          <a class="flex-item " href="#">
+          <a class="flex-item " href="https://bookit-bookshelf.herokuapp.com/">
             <div>
-              <img src="assets/images/placeholder.png" alt="/">
+              <img src="assets/images/projects/screencapture-localhost-3005-signup-2021-11-05-15_48_36.png" alt="/">
               <span>
                 <br>
-              <h2>Project 2</h2>
+              <h2>Project Two</h2>
               </span>
             </div>
           </a>
